--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bumbumt24.github.io/React/src",
+  "homepage": "https://bumbumt24.github.io/React/src/App.js",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
